--- a/package.json
+++ b/package.json
@@ -3,16 +3,42 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@storybook/addon-knobs": "^3.0.0-alpha.0",
+    "@storybook/addons": "^3.0.0-alpha.0",
+    "@storybook/react": "^3.0.0-alpha.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "css-loader": "^0.28.2",
+    "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^4.5.3",
+    "path": "^0.12.7",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-svg-pan-zoom": "^2.9.0",
+    "sass-loader": "^6.0.5",
+    "svg-sprite-loader": "^3.0.2",
+    "svg-sprite-webpack-plugin": "^1.0.3",
+    "url": "^0.11.0",
+    "webpack": "^2.6.0",
+    "webpack-dev-server": "^2.4.5"
   },
   "devDependencies": {
+    "@storybook/addon-knobs": "^3.0.0-alpha.0",
+    "@storybook/addons": "^3.0.0-alpha.0",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "react-scripts": "1.0.6"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "webpack-dev-server",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
   }
 }
