--- a/package.json
+++ b/package.json
@@ -3,41 +3,48 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@storybook/addon-knobs": "^3.0.0-alpha.0",
-    "@storybook/addons": "^3.0.0-alpha.0",
-    "@storybook/react": "^3.0.0-alpha.0",
+    "@blueprintjs/core": "^1.28.0",
+    "@storybook/addon-knobs": "^3.2.8",
+    "@storybook/addons": "^3.2.6",
+    "@storybook/react": "^3.2.8",
+    "aotds-battle": "file:../battle",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
-    "css-loader": "^0.28.2",
-    "html-webpack-plugin": "^2.28.0",
+    "css-loader": "^0.28.7",
+    "flow-bin": "^0.57.2",
+    "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.5.3",
+    "null-loader": "^0.1.1",
     "path": "^0.12.7",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-svg-pan-zoom": "^2.9.0",
-    "sass-loader": "^6.0.5",
-    "svg-sprite-loader": "^3.0.2",
-    "svg-sprite-webpack-plugin": "^1.0.3",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.0.6",
+    "postcss-url": "^7.1.2",
+    "react": "^15.6.1",
+    "react-addons-css-transition-group": "^15.6.0",
+    "react-dom": "^15.6.1",
+    "react-scripts": "^1.0.13",
+    "react-svg-pan-zoom": "^2.12.0",
+    "resolve-url-loader": "^2.1.0",
+    "sass-loader": "^6.0.6",
+    "sugarss": "^1.0.0",
+    "svg-sprite-loader": "^3.2.5",
+    "svg-sprite-webpack-plugin": "^1.1.0",
     "url": "^0.11.0",
-    "webpack": "^2.6.0",
-    "webpack-dev-server": "^2.4.5"
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.8.2"
   },
   "devDependencies": {
-    "@storybook/addon-knobs": "^3.0.0-alpha.0",
-    "@storybook/addons": "^3.0.0-alpha.0",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "react-scripts": "1.0.6"
+    "babel-preset-react": "^6.24.1"
   },
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
   }
