--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
-    "plugins": ["transform-decorators-legacy","transform-class-properties"],
+    "plugins":
+    ["transform-decorators-legacy","transform-class-properties","transform-function-bind",],
     "presets":[
-        "es2015", "stage-1", "stage-0", "react"
+        "es2015", "stage-1", "stage-0"
     ]
 }
