--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^1.28.0",
-    "@storybook/addon-knobs": "^3.2.8",
-    "@storybook/addons": "^3.2.6",
-    "@storybook/react": "^3.2.8",
-    "aotds-battle": "file:../battle",
+    "@storybook/addon-knobs": "^3.2.14",
+    "@storybook/addons": "^3.2.14",
+    "@storybook/vue": "^3.2.13",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-function-bind": "^6.22.0",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "css-loader": "^0.28.7",
@@ -23,17 +23,17 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.6",
     "postcss-url": "^7.1.2",
-    "react": "^15.6.1",
-    "react-addons-css-transition-group": "^15.6.0",
-    "react-dom": "^15.6.1",
-    "react-scripts": "^1.0.13",
-    "react-svg-pan-zoom": "^2.12.0",
     "resolve-url-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
-    "sugarss": "^1.0.0",
+    "svg-pan-zoom": "^3.5.3",
     "svg-sprite-loader": "^3.2.5",
     "svg-sprite-webpack-plugin": "^1.1.0",
+    "updeep": "^1.0.0",
     "url": "^0.11.0",
+    "vue": "^2.5.2",
+    "vue-class-component": "^6.1.0",
+    "vue-loader": "^13.3.0",
+    "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.8.2"
   },
