--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
     "plugins":
-    ["transform-decorators-legacy","transform-class-properties","transform-function-bind",],
+    ["transform-decorators-legacy","transform-class-properties","transform-function-bind","transform-async-to-generator"],
     "presets":[
-        "es2015", "stage-1", "stage-0"
+        "env", "stage-1", "stage-0"
     ]
 }
