--- a/package.json
+++ b/package.json
@@ -9,22 +9,26 @@
     "@storybook/vue": "^3.2.13",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-function-bind": "^6.22.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "css-loader": "^0.28.7",
-    "flow-bin": "^0.57.2",
     "html-webpack-plugin": "^2.30.1",
+    "jsonwebtoken": "^8.2.1",
+    "lost": "^8.2.1",
     "node-sass": "^4.5.3",
     "null-loader": "^0.1.1",
     "path": "^0.12.7",
-    "postcss-import": "^11.0.0",
+    "poi": "^9.6.13",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-import": "^11.1.0",
     "postcss-loader": "^2.0.6",
     "postcss-url": "^7.1.2",
     "resolve-url-loader": "^2.1.0",
-    "sass-loader": "^6.0.6",
     "svg-pan-zoom": "^3.5.3",
     "svg-sprite-loader": "^3.2.5",
     "svg-sprite-webpack-plugin": "^1.1.0",
@@ -35,6 +39,7 @@
     "vue-loader": "^13.3.0",
     "vue-svg-pan-zoom": "^0.0.2",
     "vue-template-compiler": "^2.5.2",
+    "vuex": "^3.0.1",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.8.2"
   },
