--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@blueprintjs/core": "^1.28.0",
     "@storybook/addon-knobs": "^3.2.14",
     "@storybook/addons": "^3.2.14",
     "@storybook/vue": "^3.2.13",
@@ -20,7 +19,6 @@
     "html-webpack-plugin": "^2.30.1",
     "jsonwebtoken": "^8.2.1",
     "lost": "^8.2.1",
-    "node-sass": "^4.5.3",
     "null-loader": "^0.1.1",
     "path": "^0.12.7",
     "poi": "^9.6.13",
@@ -43,12 +41,7 @@
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.8.2"
   },
-  "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1"
-  },
+  "devDependencies": {},
   "scripts": {
     "start": "webpack-dev-server",
     "storybook": "start-storybook -p 9009 -s public",
