--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "svg-pan-zoom": "^3.5.3",
     "svg-sprite-loader": "^3.2.5",
     "svg-sprite-webpack-plugin": "^1.1.0",
+    "svg.js": "^2.6.4",
     "updeep": "^1.0.0",
     "url": "^0.11.0",
     "vue": "^2.5.13",
     "vue-class-component": "^6.1.0",
     "vue-loader": "^13.3.0",
-    "vue-svg-pan-zoom": "^0.0.2",
+    "vue-svg-pan-zoom": "^0.1.0",
     "vue-template-compiler": "^2.5.2",
     "vuex": "^3.0.1",
     "webpack": "^3.6.0",
