--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "css-loader": "^0.28.7",
     "html-webpack-plugin": "^2.30.1",
     "jsonwebtoken": "^8.2.1",
+    "keen-ui": "^1.0.1",
     "lost": "^8.2.1",
     "null-loader": "^0.1.1",
     "path": "^0.12.7",
