--- a/package.json
+++ b/package.json
@@ -3,45 +3,44 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@storybook/addon-knobs": "^3.2.14",
-    "@storybook/addons": "^3.2.14",
-    "@storybook/vue": "^3.2.13",
+    "@storybook/addon-knobs": "^3.4.2",
+    "@storybook/addons": "^3.4.2",
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^7.1.4",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-function-bind": "^6.22.0",
     "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
-    "css-loader": "^0.28.7",
-    "html-webpack-plugin": "^2.30.1",
+    "css-loader": "^0.28.11",
+    "html-webpack-plugin": "^3.2.0",
     "jsonwebtoken": "^8.2.1",
-    "keen-ui": "^1.0.1",
     "lost": "^8.2.1",
     "null-loader": "^0.1.1",
     "path": "^0.12.7",
-    "poi": "^9.6.13",
+    "poi": "^10.0.3",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.1.0",
-    "postcss-loader": "^2.0.6",
-    "postcss-url": "^7.1.2",
-    "resolve-url-loader": "^2.1.0",
-    "svg-pan-zoom": "^3.5.3",
-    "svg-sprite-loader": "^3.2.5",
+    "postcss-loader": "2.1.4",
+    "postcss-url": "^7.3.2",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-hot-loader": "^4.1.0",
+    "react-redux": "^5.0.7",
+    "resolve-url-loader": "^2.3.0",
+    "style-loader": "^0.20.3",
+    "svg-sprite-loader": "^3.7.3",
     "svg-sprite-webpack-plugin": "^1.1.0",
     "svg.js": "^2.6.4",
     "updeep": "^1.0.0",
     "url": "^0.11.0",
-    "vue": "^2.5.13",
-    "vue-class-component": "^6.1.0",
-    "vue-loader": "^13.3.0",
-    "vue-svg-pan-zoom": "^0.1.0",
-    "vue-template-compiler": "^2.5.2",
-    "vuex": "^3.0.1",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.8.2"
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3"
   },
   "devDependencies": {},
   "scripts": {
