--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^16.3.2",
     "react-hot-loader": "^4.1.0",
     "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
     "resolve-url-loader": "^2.3.0",
     "style-loader": "^0.20.3",
     "svg-sprite-loader": "^3.7.3",
