--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blueprintjs/core": "^2.1.1",
+    "@blueprintjs/icons": "^2.1.1",
     "@storybook/addon-knobs": "^3.4.2",
     "@storybook/addons": "^3.4.2",
     "babel-core": "^6.26.0",
@@ -31,6 +33,7 @@
     "react-dom": "^16.3.2",
     "react-hot-loader": "^4.1.0",
     "react-redux": "^5.0.7",
+    "react-transition-group": "^2.3.1",
     "redux": "^4.0.0",
     "resolve-url-loader": "^2.3.0",
     "style-loader": "^0.20.3",
