--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@blueprintjs/icons": "^2.1.1",
     "@storybook/addon-knobs": "^3.4.2",
     "@storybook/addons": "^3.4.2",
+    "another-rest-client": "^0.5.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
@@ -36,6 +37,8 @@
     "react-transition-group": "^2.3.1",
     "redux": "^4.0.0",
     "resolve-url-loader": "^2.3.0",
+    "rest": "^2.0.0",
+    "rest-js": "^1.1.3",
     "style-loader": "^0.20.3",
     "svg-sprite-loader": "^3.7.3",
     "svg-sprite-webpack-plugin": "^1.1.0",
