--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "url": "^0.11.0",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.3"
+    "webpack-dev-server": "^3.1.3",
+    "ws": "^5.1.1"
   },
   "devDependencies": {},
   "scripts": {
