--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "postcss-loader": "2.1.4",
     "postcss-url": "^7.3.2",
     "react": "^16.3.2",
+    "react-beautiful-dnd": "^7.1.0",
     "react-dom": "^16.3.2",
     "react-hot-loader": "^4.1.0",
     "react-redux": "^5.0.7",
