--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@blueprintjs/icons": "^2.1.1",
     "@storybook/addon-knobs": "^3.4.2",
     "@storybook/addons": "^3.4.2",
+    "@storybook/cli": "^3.4.3",
+    "@storybook/react": "^3.4.3",
     "another-rest-client": "^0.5.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
@@ -25,7 +27,6 @@
     "lost": "^8.2.1",
     "null-loader": "^0.1.1",
     "path": "^0.12.7",
-    "poi": "^10.0.3",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.1.0",
     "postcss-loader": "2.1.4",
