--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,8 @@
 {
     "plugins":
-    ["transform-decorators-legacy","transform-class-properties","transform-function-bind","transform-async-to-generator"],
+    ["transform-decorators-legacy","transform-class-properties","transform-function-bind","transform-async-to-generator", 
+        [ "module-resolver", { "alias": { "~": "./src" } } ]
+    ],
     "presets":[
         "env", "react", "stage-1", "stage-0"
     ]
