--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-preset-stage-1": "^6.24.1",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^22.4.3",
     "jsonwebtoken": "^8.2.1",
     "lost": "^8.2.1",
     "null-loader": "^0.1.1",
