--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
+    "classnames": "^2.2.5",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
