--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "lost": "^8.2.1",
     "null-loader": "^0.1.1",
     "path": "^0.12.7",
+    "postcss-cli": "^5.0.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.1.0",
     "postcss-loader": "2.1.4",
+    "postcss-preset-env": "^5.1.0",
     "postcss-url": "^7.3.2",
     "react": "^16.3.2",
     "react-beautiful-dnd": "^7.1.0",
