--- a/package.json
+++ b/package.json
@@ -3,41 +3,62 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@blueprintjs/core": "^2.1.1",
-    "@blueprintjs/icons": "^2.1.1",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/node": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-do-expressions": "^7.0.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-stage-0": "^7.0.0",
+    "@babel/preset-stage-1": "^7.0.0",
+    "@blueprintjs/core": "^3.5.1",
+    "@blueprintjs/icons": "^3.1.0",
     "@storybook/addon-knobs": "^3.4.2",
     "@storybook/addons": "^3.4.2",
     "@storybook/cli": "^3.4.3",
     "@storybook/react": "^3.4.3",
+    "actioner": "^0.2.0",
     "another-rest-client": "^0.5.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
+    "aotds-battle": "link:/home/yanick/work/aotds/battle/",
+    "babel-7-jest": "^21.3.3",
+    "babel-loader": "^8.0.2",
     "babel-plugin-module-resolver": "^3.1.1",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-function-bind": "^6.22.0",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
     "classnames": "^2.2.5",
-    "css-loader": "^0.28.11",
+    "css-loader": "^1.0.0",
+    "debug": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^22.4.3",
+    "jest": "^23.5.0",
+    "json-schema-shorthand": "^0.3.0",
     "jsonwebtoken": "^8.2.1",
+    "lodash": "^4.17.10",
     "lost": "^8.2.1",
+    "normalize.css": "^8.0.0",
     "null-loader": "^0.1.1",
     "path": "^0.12.7",
-    "postcss-cli": "^5.0.0",
+    "postcss-cli": "^6.0.0",
     "postcss-cssnext": "^3.1.0",
-    "postcss-import": "^11.1.0",
-    "postcss-loader": "2.1.4",
+    "postcss-import": "^12.0.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-nesting": "^6.0.0",
     "postcss-preset-env": "^5.1.0",
-    "postcss-url": "^7.3.2",
+    "postcss-url": "^8.0.0",
     "react": "^16.3.2",
-    "react-beautiful-dnd": "^7.1.0",
+    "react-beautiful-dnd": "^9.0.2",
     "react-dom": "^16.3.2",
     "react-hot-loader": "^4.1.0",
     "react-redux": "^5.0.7",
@@ -46,18 +67,17 @@
     "resolve-url-loader": "^2.3.0",
     "rest": "^2.0.0",
     "rest-js": "^1.1.3",
-    "style-loader": "^0.20.3",
+    "style-loader": "^0.23.0",
     "svg-sprite-loader": "^3.7.3",
     "svg-sprite-webpack-plugin": "^1.1.0",
     "svg.js": "^2.6.4",
     "updeep": "^1.0.0",
     "url": "^0.11.0",
     "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.3",
-    "ws": "^5.1.1"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.7",
+    "ws": "^6.0.0"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "webpack-dev-server",
     "storybook": "start-storybook -p 9009 -s public",
